--- a/proj/src/Makefile.am
+++ b/proj/src/Makefile.am
@@ -10,7 +10,7 @@ proj_SOURCES = proj.c gen_cheb.c p_series.c
 cs2cs_SOURCES = cs2cs.c gen_cheb.c p_series.c
 nad2nad_SOURCES = nad2nad.c 
 nad2bin_SOURCES = nad2bin.c
-geod_SOURCES = geod.c geod_set.c geod_for.c geod_inv.c geodesic.h
+geod_SOURCES = geod.c geod_set.c geod_for.c geod_inv.c emess.c geodesic.h
 
 proj_LDADD = libproj.la
 cs2cs_LDADD = libproj.la
@@ -20,14 +20,14 @@ geod_LDADD = libproj.la
 
 lib_LTLIBRARIES = libproj.la
 
-libproj_la_LDFLAGS = -version-info 4:2:4
+libproj_la_LDFLAGS = -version-info 2:0:2
 
 libproj_la_SOURCES = \
 	projects.h pj_list.h \
 	PJ_aeqd.c PJ_gnom.c PJ_laea.c PJ_mod_ster.c \
 	PJ_nsper.c PJ_nzmg.c PJ_ortho.c PJ_stere.c \
 	PJ_aea.c PJ_bipc.c PJ_bonne.c PJ_eqdc.c \
-	PJ_imw_p.c PJ_krovak.c PJ_lcc.c PJ_mpoly.c PJ_poly.c \
+	PJ_imw_p.c PJ_lcc.c PJ_mpoly.c PJ_poly.c \
 	PJ_rpoly.c PJ_sconics.c \
 	PJ_cass.c PJ_cc.c PJ_cea.c PJ_eqc.c \
 	PJ_gall.c PJ_labrd.c PJ_lsat.c PJ_merc.c \
@@ -37,7 +37,7 @@ libproj_la_SOURCES = \
 	PJ_chamb.c PJ_hammer.c PJ_lagrng.c PJ_larr.c \
 	PJ_lask.c PJ_nocol.c PJ_ob_tran.c PJ_oea.c \
 	PJ_tpeqd.c PJ_vandg.c PJ_vandg2.c PJ_vandg4.c \
-	PJ_wag7.c PJ_lcca.c \
+	PJ_wag7.c \
 	PJ_boggs.c PJ_collg.c PJ_crast.c PJ_denoy.c \
 	PJ_eck1.c PJ_eck2.c PJ_eck3.c PJ_eck4.c \
 	PJ_eck5.c PJ_fahey.c PJ_fouc_s.c PJ_gins8.c \
@@ -46,7 +46,7 @@ libproj_la_SOURCES = \
 	PJ_nell.c PJ_nell_h.c PJ_putp2.c PJ_putp3.c \
 	PJ_putp4p.c PJ_putp5.c PJ_putp6.c PJ_robin.c \
 	PJ_sts.c PJ_urm5.c PJ_urmfps.c PJ_wag2.c \
-	PJ_wag3.c PJ_wink1.c PJ_wink2.c pj_latlong.c pj_geocent.c \
+	PJ_wag3.c PJ_wink1.c PJ_wink2.c pj_latlong.c \
 	aasincos.c adjlon.c bch2bps.c bchgen.c \
 	biveval.c dmstor.c mk_cheby.c pj_auth.c \
 	pj_deriv.c pj_ell_set.c pj_ellps.c pj_errno.c \
@@ -58,11 +58,11 @@ libproj_la_SOURCES = \
 	\
 	nad_cvt.c nad_init.c nad_intr.c emess.c emess.h \
 	pj_apply_gridshift.c pj_datums.c pj_datum_set.c pj_transform.c \
-	geocent.c geocent.h pj_utils.c pj_gridinfo.c pj_gridlist.c
+	geocent.c geocent.h strtod.c pj_utils.c
 
 
 install-exec-local:
-	rm -f $(DESTDIR)$(bindir)/invproj$(EXEEXT)
-	(cd $(DESTDIR)$(bindir); ln -s proj$(EXEEXT) invproj$(EXEEXT))
-	rm -f $(DESTDIR)$(bindir)/invgeod$(EXEEXT)
-	(cd $(DESTDIR)$(bindir); ln -s geod$(EXEEXT) invgeod$(EXEEXT))
+	rm -f $(DESTDIR)$(bindir)/invproj
+	ln $(DESTDIR)$(bindir)/proj $(DESTDIR)$(bindir)/invproj
+	rm -f $(DESTDIR)$(bindir)/invgeod
+	ln $(DESTDIR)$(bindir)/geod $(DESTDIR)$(bindir)/invgeod
