--- a/proj/src/makefile.vc
+++ b/proj/src/makefile.vc
@@ -1,21 +1,3 @@
-#
-# Set the following to the directory where the PROJ distribution 
-# data files (ie, the contents of ..\NAD).  The following assumes
-# the PROJ distribution is unpacked as C:\PROJ, which generally must
-# be adjusted.  It is also possible to leave this, and define the
-# PROJ_LIB environment variable to point to the NAD directory.
-#
-PROJ_LIB_DIR=C:/PROJ/NAD
-
-# Uncomment the first for an optimized build, or the second for debug.
-OPTFLAGS=	/nologo /Ox 
-#OPTFLAGS=	/nologo /Zi /Fdproj.pdb
-
-# Set the version number for the DLL.  Normally we leave this blank since
-# we want software that is dynamically loading the DLL to have no problem
-# with version numbers.
-VERSION=
-
 azimuthal = \
 	PJ_aeqd.obj PJ_gnom.obj PJ_laea.obj PJ_mod_ster.obj \
 	PJ_nsper.obj PJ_nzmg.obj PJ_ortho.obj PJ_stere.obj
@@ -23,7 +5,7 @@ azimuthal = \
 conic = \
 	PJ_aea.obj PJ_bipc.obj PJ_bonne.obj PJ_eqdc.obj \
 	PJ_imw_p.obj PJ_lcc.obj PJ_mpoly.obj PJ_poly.obj \
-	PJ_rpoly.obj PJ_sconics.obj PJ_lcca.obj
+	PJ_rpoly.obj PJ_sconics.obj
 
 cylinder = \
 	PJ_cass.obj PJ_cc.obj PJ_cea.obj PJ_eqc.obj \
@@ -36,7 +18,7 @@ misc = \
 	PJ_chamb.obj PJ_hammer.obj PJ_lagrng.obj PJ_larr.obj \
 	PJ_lask.obj PJ_nocol.obj PJ_ob_tran.obj PJ_oea.obj \
 	PJ_tpeqd.obj PJ_vandg.obj PJ_vandg2.obj PJ_vandg4.obj \
-	PJ_wag7.obj pj_latlong.obj PJ_krovak.obj pj_geocent.obj 
+	PJ_wag7.obj pj_latlong.obj
 
 pseudo = \
 	PJ_boggs.obj PJ_collg.obj PJ_crast.obj PJ_denoy.obj \
@@ -59,58 +41,35 @@ support = \
 	pj_qsfn.obj pj_strerrno.obj pj_tsfn.obj pj_units.obj \
 	pj_zpoly1.obj rtodms.obj vector1.obj pj_release.obj \
 	geocent.obj pj_transform.obj pj_datum_set.obj pj_datums.obj \
-	pj_apply_gridshift.obj nad_cvt.obj nad_init.obj \
-	nad_intr.obj pj_utils.obj pj_gridlist.obj pj_gridinfo.obj
+	pj_apply_gridshift.obj emess.obj nad_cvt.obj nad_init.obj \
+	nad_intr.obj strtod.obj pj_utils.obj
 
 LIBOBJ	=	$(support) $(pseudo) $(azimuthal) $(conic) $(cylinder) $(misc)
-PROJEXE_OBJ	= proj.obj gen_cheb.obj p_series.obj emess.obj
-CS2CSEXE_OBJ	= cs2cs.obj gen_cheb.obj p_series.obj emess.obj
-GEODEXE_OBJ	= geod.obj geod_set.obj geod_for.obj geod_inv.obj emess.obj
-PROJ_DLL 	= proj$(VERSION).dll
-CFLAGS	=	/nologo -I. -DPROJ_LIB=\"$(PROJ_LIB_DIR)\" \
-		-DHAVE_STRERROR=1 $(OPTFLAGS)
+PROJEXE_SRC	=	proj.c gen_cheb.c p_series.c
+CS2CSEXE_SRC	=	cs2cs.c gen_cheb.c p_series.c
+GEODEXE_SRC	=	geod.c geod_set.c geod_for.c geod_inv.c emess.c
+CFLAGS	=	-I. -DPROJ_LIB=\"C:/PROJ/\"
 
 default:	all
 
-all:            proj.lib $(PROJ_DLL) proj.exe cs2cs.exe geod.exe nad2nad.exe
+all:            proj.lib proj.dll proj.exe cs2cs.exe geod.exe
 
 proj.lib:	$(LIBOBJ)
 	if exist proj.lib del proj.lib
 	lib /out:proj.lib $(LIBOBJ)
 
-$(PROJ_DLL):	$(LIBOBJ)
-	link /debug /dll /def:proj.def /out:$(PROJ_DLL) /implib:proj_i.lib \
+proj.dll:	$(LIBOBJ)
+	link /debug /dll /def:proj.def /out:proj.dll /implib:proj_i.lib \
 			$(LIBOBJ)
 
-proj.exe:	$(PROJEXE_OBJ) proj.lib
-	cl $(PROJEXE_OBJ) proj.lib
+proj.exe:	$(PROJEXE_SRC) proj.lib
+	cl -I. $(PROJEXE_SRC) proj.lib
 
-cs2cs.exe:	$(CS2CSEXE_OBJ) proj.lib
-	cl $(CS2CSEXE_OBJ) proj.lib
+cs2cs.exe:	$(CS2CSEXE_SRC) proj.lib
+	cl -I. $(CS2CSEXE_SRC) proj.lib
 
-geod.exe:	$(GEODEXE_OBJ) proj.lib
-	cl $(GEODEXE_OBJ) proj.lib
-
-nad2nad.exe:	nad2nad.obj emess.obj proj.lib
-	cl nad2nad.obj emess.obj proj.lib
-
-nad2bin.exe:	nad2bin.obj emess.obj proj.lib
-	cl nad2bin.obj emess.obj proj.lib
-
-nadshift:	nad2bin.exe
-	cd ..\nad
-	..\src\nad2bin.exe < conus.lla conus
-	..\src\nad2bin.exe < MD.lla MD
-	..\src\nad2bin.exe < TN.lla TN
-	..\src\nad2bin.exe < WI.lla WI
-	..\src\nad2bin.exe < WO.lla WO
-	..\src\nad2bin.exe < alaska.lla alaska
-	..\src\nad2bin.exe < hawaii.lla hawaii
-	..\src\nad2bin.exe < prvi.lla prvi
-	..\src\nad2bin.exe < stgeorge.lla stgeorge
-	..\src\nad2bin.exe < stlrnc.lla stlrnc
-	..\src\nad2bin.exe < stpaul.lla stpaul
-	cd ..\src
+geod.exe:	$(GEODEXE_SRC) proj.lib
+	cl -I. $(GEODEXE_SRC) proj.lib
 
 clean:
 	del *.obj *.lib *.dll
